# cmake-application-project-template

./: CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt
libs/boo/: CMakeLists.txt
libs/boo/include/boo/: boo.hpp
libs/foo/: CMakeLists.txt
libs/foo/include/foo/: foo.hpp
libs/foo/src/: foo.cpp
